<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="endurance">Endurance</string>
    <string name="flex">Flexibilty</string>
    <string name="strength">Strength</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="createProfile">Create Profile</string>
    <string name="createProfileDetail">Create a profile to get personalized workout plans for your specific needs and goals!</string>
    <string name="workoutTitle">My Workouts</string>
    <string name="exerciseTitle">Exercises</string>
    <string name="shouldersTitle">Shoulders</string>
    <string name="armsTitle">Arms</string>
    <string name="chestTitle">Chest</string>
    <string name="absTitle">Abs</string>
    <string name="lowerBodyTitle">Lower Body</string>
    <string name="backTitle">Back</string>
    <string name="menuImgDescription">Menu icon for menu button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="defaultWorkouts">Default Workouts</string>
    <string name="customWorkouts">Custom Workouts</string>
    <string name="addWorkoutButtonDesc"> Button to add a workout into workout database</string>
    <string name="title_activity_add_workout">AddWorkoutActivity</string>
    <string name="hintForWorkoutsText">Enter The Name of Your Workout</string>
    <string name="addWorkoutButtonText">Add Workout</string>
    <string name="settingsTitle">Settings</string>
    <string name="weightTitle">Weight:</string>
    <string name="nameTitle">Name:</string>
    <string name="ageTitle">Age:</string>
    <string name="sexTitle">Sex:</string>
    <string name="heightTitle">Height:</string>
    <string name="heightTip">(in inches)</string>
    <string name="maleButtonTitle">Male</string>
    <string name="femaleButtonTitle">Female</string>
    <string name="submitButtonTitle">Submit</string>
    <string name="bmiTitle">Current BMI:</string>
    <string name="physicalAbility">Which word best describes your physical ability?</string>
    <string name="knowledge">How would you describe your knowledge of a gym?</string>
    <string name="weak">Weak</string>
    <string name="neutral">Neutral</string>
    <string name="athletic">Athletic</string>
    <string name="novice">Novice</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>



</resources>
